# moc

./: .gitmodules  Makefile  README
android/: AndroidManifest.xml
android/jni/: Android.mk  j_moc.c
client/: Android.mk  CMakeLists.txt  Makefile  README  eloop.c  eloop.h  internal.c  internal.h  lerr.c  lerr.h  mcbk.c  mcbk.h  moc-private.h  moc-trigger.h  moc.c  moc.h  mscli.c  mscli.h  mtrace.h  packet.c  packet.h  tcp.c  tcp.h
client/clearsilver/: ClearSilver.h  cs_config.h
client/clearsilver/tmp/: Makefile
client/clearsilver/util/: CMakeLists.txt  filter.c  filter.h  neo_date.c  neo_err.c  neo_err.h  neo_hash.c  neo_hash.h  neo_hdf.c  neo_hdf.h  neo_misc.c  neo_net.c  neo_rand.c  neo_str.c  neo_str.h
client/clearsilver/util/java/: j_neo_util.c  org_clearsilver_HDF.h
client/jni/: Android.mk  Application.mk  MocClient.java  client.patch  j_moc.c  moc-jni.c
conf/: Makefile  mocclient.hdf  server.hdf
demo/: .gitignore  Makefile  bang.c  chat.c  mocclient.hdf  send.c
plugin/: Makefile  moc_bang.c  moc_bang.h  moc_base.c  moc_base.h  moc_basem.h  moc_chat.c  moc_chat.h  moc_plugin.h  moc_skeleton.c  moc_skeleton.h
plugin/private/: bang_internal.c  bang_pri.h  bang_timer.c  base_internal.c  base_pri.h  base_timer.c  chat_callback.c  chat_internal.c  chat_pri.h  skeleton_internal.c  skeleton_timer.c
server/: Makefile  cache.c  cache.h  lerr.c  lerr.h  lglobal.h  lheads.h  main.c  moc-private.h  mocd.c  mocd.h  net.c  net.h  packet.c  packet.h  parse.c  parse.h  queue.c  queue.h  req.h  syscmd.c  syscmd.h  tcp.c  tcp.h
(+4 files in other folders)
